--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<dependency>
 			<groupId>com.jfinal</groupId>
 			<artifactId>jfinal</artifactId>
-			<version>2.2</version>
+			<version>1.9</version>
 		</dependency>
 
 
@@ -74,6 +74,25 @@
 			<version>10.2.0.4.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.5.3</version>
+		</dependency>
+		
+		
+	<!-- 	<dependency>
+			<groupId>com.jfinal</groupId>
+			<artifactId>DubboDemoApi</artifactId>
+			<version>1.0.0</version>
+		</dependency> -->
 	</dependencies>
 	<build>
 		<finalName>hlht</finalName>
