--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
 		<init-param>
 			<param-name>configClass</param-name>
-			<param-value>com.config.MyCofig</param-value>
+			<param-value>com.ulab.config.UlabCofig</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
