--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /target
 /target/
 *.log
+/src/main/webapp/.idea
+/target/m2e-wtp/web-resources/META-INF/maven/hlht/hlht/pom.properties
+/target/m2e-wtp/web-resources/META-INF/*.MF
