--- a/pom.xml
+++ b/pom.xml
@@ -106,11 +106,11 @@
 		</dependency>
 		
 		<!-- 引入dubbo -->
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
 			<version>2.5.3</version>
-		</dependency>
+		</dependency> -->
 		
 		
 	<!-- 	<dependency>
