--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -3,11 +3,11 @@ job.channel_one.class= com.ulab.job.TestQuartzJobOne
 job.channel_one.group=default
 job.channel_one.id=1
 job.channel_one.cron=*/2 * * * * ?
-job.channel_one.enable=true
+job.channel_one.enable=false
 
 job.channel_two.class= com.ulab.job.TestQuartzJobTwo
 job.channel_two.group=default
 job.channel_two.id=2
 job.channel_two.cron=*/5 * * * * ?
-job.channel_two.enable=true
+job.channel_two.enable=false
 
