--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,42 @@
              <artifactId>jfinal-quartz</artifactId>
              <version>0.2</version>
          </dependency>
+         
+         <!-- 读取word内容 -->
+        <!--  <dependency>
+		   <groupId>org.apache.poi</groupId>
+		   <artifactId>poi-scratchpad</artifactId>
+		   <version>3.2-FINAL</version>
+		</dependency> -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.8</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.xmlbeans</groupId>
+		    <artifactId>xmlbeans</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.8</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml-schemas</artifactId>
+		    <version>3.8</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-scratchpad</artifactId>
+		    <version>3.2-FINAL</version>
+		</dependency>
+		
+		
+		
+         
 	</dependencies>
 	<build>
 		<finalName>hlht</finalName>
