--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /target/m2e-wtp/web-resources/META-INF/maven/hlht/hlht/pom.properties
 /target/m2e-wtp/web-resources/META-INF/*.MF
 /target/
+/target/
