--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -9,5 +9,5 @@ job.channel_two.class= com.ulab.job.TestQuartzJobTwo
 job.channel_two.group=default
 job.channel_two.id=2
 job.channel_two.cron=*/6 * * * * ?
-job.channel_two.enable=true
+job.channel_two.enable=false
 
