--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	</properties>
 
 	<dependencies>
+		 <dependency>
+	        <groupId>com.feizhou</groupId>
+	        <artifactId>jfinal-swagger</artifactId>
+	        <version>1.0-SNAPSHOT</version>
+    	</dependency>
 		<dependency>
 			<groupId>com.jfinal</groupId>
 			<artifactId>jfinal</artifactId>
