文件上传 白名单维护接口

--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -58,8 +58,8 @@ person.SavePath=person
 person.MaxSize=800
 
 
-FTP_ip=60.205.229.238
-FTP_port=21
-FTP_userName=test
-FTP_password=test
-FTP_maxPostSize=5242880
+ftp_ip=60.205.229.238
+ftp_port=21
+ftp_userName=test
+ftp_password=test
+ftp_maxPostSize=5242880
