切换数据源

--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -1,8 +1,11 @@
 #\u6570\u636e\u5e93:oracle postgre
 db_type=mysql
 
-mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.user = root
+#mysql.password = hl123456
+mysql.jdbcUrl =jdbc:mysql://47.96.181.194:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.user = root
-mysql.password = hl123456
+mysql.password = 
 mysql.driverClass = com.mysql.jdbc.Driver
 
