--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,67 @@
 		    <artifactId>commons-net</artifactId>
 		    <version>3.6</version>
 		</dependency>
+        
+		<!-- openoffice 处理excel -->
+				<dependency>
+            <groupId>org.artofsolving.jodconverter</groupId>
+            <artifactId>jodconverter-core</artifactId>
+            <version>3.0-beta-3</version>
+        </dependency>
+		<!-- 文档 -->
+		<dependency>
+			<groupId>com.artofsolving</groupId>
+			<artifactId>jodconverter</artifactId>
+			<version>2.2.2</version>
+		</dependency> 
+		 <dependency> 
+      <groupId>org.openoffice</groupId> 
+      <artifactId>jurt</artifactId> 
+      <version>3.0.1</version> 
+    </dependency> 
+    <dependency> 
+      <groupId>org.openoffice</groupId> 
+      <artifactId>ridl</artifactId> 
+      <version>3.0.1</version> 
+    </dependency> 
+    <dependency> 
+      <groupId>org.openoffice</groupId> 
+      <artifactId>juh</artifactId> 
+      <version>3.0.1</version> 
+    </dependency> 
+    <dependency> 
+      <groupId>org.openoffice</groupId> 
+      <artifactId>unoil</artifactId> 
+      <version>3.0.1</version> 
+    </dependency> 
+        <!-- <dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>ridl</artifactId>
+			<version>4.1.2</version>
+		</dependency> -->
+        <!-- <dependency> 
+	      <groupId>org.slf4j</groupId> 
+	      <artifactId>slf4j-jdk14</artifactId> 
+	      <version>1.4.3</version> 
+	    </dependency> -->
+	    <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-nop</artifactId>
+    <version>1.7.24</version>
+    </dependency>
+      <!--  <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.6.3</version>
+		</dependency>
+        
+        <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-log4j12</artifactId>
+	    <version>1.6.3</version>
+		</dependency>  -->
 		
+
 	</dependencies>
 
 	<!-- 使用aliyun maven -->
