--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -3,9 +3,9 @@
 #\u6570\u636e\u5e93:oracle postgre
 db_type=mysql
 
-mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-mysql.user = root
-mysql.password = hl123456
+#mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.user = root
+#mysql.password = hl123456
 #mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
 #mysql.password = hl123456
@@ -23,10 +23,10 @@ mysql.password = hl123456
 #mysql.user = root
 #mysql.password = 123456
 
-#mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#mysql.user = root
-#mysql.password = hl123456
-#mysql.driverClass = com.mysql.jdbc.Driver
+mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.user = root
+mysql.password = hl123456
+mysql.driverClass = com.mysql.jdbc.Driver
 
 
 #mysql.jdbcUrl =jdbc:mysql://localhost/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
