--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -1,12 +1,10 @@
 
 db_type=mysql
 
-mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-mysql.user = root
-mysql.password = hl123456
 #mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
 #mysql.password = hl123456
+
 
 #mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
@@ -15,19 +13,14 @@ mysql.password = hl123456
 
 
 
-#mysql.jdbcUrl =jdbc:mysql://47.96.181.194:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.jdbcUrl =jdbc:mysql://192.168.0.102:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
-#mysql.password = 
-#mysql.driverClass = com.mysql.jdbc.Driver
+#mysql.password = 654321
 
-#mysql.jdbcUrl =jdbc:mysql://localhost/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#mysql.user = root
-#mysql.password = 123456
-
-#mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#mysql.user = root
-#mysql.password = hl123456
-#mysql.driverClass = com.mysql.jdbc.Driver
+mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.user = root
+mysql.password = hl123456
+mysql.driverClass = com.mysql.jdbc.Driver
 
 
 
