--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -6,10 +6,10 @@ db_type=mysql
 #mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
 #mysql.password = hl123456
-mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-mysql.user = root
-mysql.password = hl123456
-mysql.driverClass = com.mysql.jdbc.Driver
+#mysql.jdbcUrl =jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.user = root
+#mysql.password = hl123456
+#mysql.driverClass = com.mysql.jdbc.Driver
 
 
 
