爬取工具类，优化

--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,13 @@
 			<version>1.4.4</version>
 		</dependency>
 		<!-- javamail邮件发送 -->
-		<!-- 数据库 -->
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.8.3</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
