--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -56,8 +56,8 @@ fileNameFormat={time}{rand:6}
 person.SavePath=person
 # \u4e0a\u4f20\u6587\u4ef6\u5927\u5c0f
 person.MaxSize=800
-
-
+# ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
+ftp_store=zhengxin_File
 ftp_ip=60.205.229.238
 ftp_port=21
 ftp_userName=test
