--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,12 @@
 	 <groupId>org.apache.poi</groupId>
 	 <artifactId>poi</artifactId>
 	 <version>3.10-FINAL</version>
-		</dependency>
+	</dependency>
+	<dependency>
+        <groupId>net.sourceforge.tess4j</groupId>
+        <artifactId>tess4j</artifactId>
+        <version>3.4.1</version>
+	</dependency>
 	<dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi-ooxml</artifactId>
