公共返回方法 前台提示

--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -11,14 +11,14 @@ mysql.driverClass = com.mysql.jdbc.Driver
 #mysql.password = hl123456
 
 
-#mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#mysql.user = root
-#mysql.password = 123456
-
-
-mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.user = root
-mysql.password = hl123456
+mysql.password = 123456
+
+
+#mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.user = root
+#mysql.password = hl123456
 
 
 
