--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -13,7 +13,7 @@ mysql.driverClass = com.mysql.jdbc.Driver
 
 mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.user = root
-mysql.password = 123456
+mysql.password = root
 
 
 #mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
