--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,21 @@
 	 <version>3.10-FINAL</version>
 	</dependency>
 	<dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient-cache</artifactId>
+      <version>4.5</version>
+    </dependency>
+    <dependency>
+     <groupId>org.apache.httpcomponents</groupId>
+     <artifactId>httpmime</artifactId>
+     <version>4.3.2</version>
+    </dependency>
+	<dependency>
         <groupId>net.sourceforge.tess4j</groupId>
         <artifactId>tess4j</artifactId>
         <version>3.4.1</version>
