--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -4,14 +4,14 @@ mysql.driverClass = com.mysql.jdbc.Driver
 
 
 
-#mysql.jdbcUrl = jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#mysql.user = root
-#mysql.password = hl123456
-
-
-mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.jdbcUrl = jdbc:mysql://60.205.229.238:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.user = root
-mysql.password = root
+mysql.password = hl123456
+
+
+#mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.user = root
+#mysql.password = root
 
 
 
