--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,8 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache</artifactId>
-			<version>2.7.5</version>
-			<scope>provided</scope>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.6.6</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
