--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -59,6 +59,7 @@ person.MaxSize=800
 # ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
 ftp_store=zhengxin_File
 ftp_ip=60.205.229.238
+#ftp_ip=192.168.43.12
 ftp_port=21
 ftp_userName=test
 ftp_password=test
