--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -59,6 +59,8 @@ person.MaxSize=800
 # ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
 ftp_store=zhengxin_File
 ftp_ip=60.205.229.238
+#\u670d\u52a1\u5668\u7aef\u53e3\u53f7
+searver_port=9980
 #ftp_ip=192.168.43.12
 ftp_port=21
 ftp_userName=test
