--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 #swagger zu jian sao miao bao 
 swagger.base_package=com.hailian.modules.credit
 salt=gbkDUact
+tablename_salt=DdafDZZDFDADFWQRQDdsfa34sd
