--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,11 @@
 		<artifactId>poi-ooxml</artifactId>
 		<version>3.10-FINAL</version>
 		</dependency>
+		<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml-schemas</artifactId>
+     <version>3.10-FINAL</version>
+</dependency>
         <!-- <dependency>
 			<groupId>org.openoffice</groupId>
 			<artifactId>ridl</artifactId>
