--- a/pom.xml
+++ b/pom.xml
@@ -268,17 +268,18 @@
     <artifactId>slf4j-nop</artifactId>
     <version>1.7.24</version>
     </dependency>
-      <!--  <dependency>
+
+       <dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
 	    <version>1.6.3</version>
 		</dependency>
-        
+
         <dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-log4j12</artifactId>
 	    <version>1.6.3</version>
-		</dependency>  -->
+		</dependency>
 		
 
 	</dependencies>
