--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -58,10 +58,10 @@ person.SavePath=person
 person.MaxSize=800
 # ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
 ftp_store=zhengxin_File
-ftp_ip=60.205.229.238
+ftp_ip=120.27.46.160
 #\u670d\u52a1\u5668\u7aef\u53e3\u53f7
 searver_port=9980
-ftp_port=21
-ftp_userName=test
-ftp_password=test
+ftp_port=9999
+ftp_userName=ftpuser
+ftp_password=Hl@20181124
 ftp_maxPostSize=5242880
