百度翻译api账号id切换加配置化

--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -65,3 +65,6 @@ ftp_port=9999
 ftp_userName=ftpuser
 ftp_password=Hl@20181124
 ftp_maxPostSize=5242880
+#\u767e\u5ea6\u7ffb\u8bd1api id\u548c\u79d8\u94a5
+appid=20190114000256825
+secretkey=viHLtvR04Ab2fMJvPJe5
