创建订单相同报告引用

--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -58,7 +58,10 @@ person.SavePath=person
 person.MaxSize=800
 # ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
 ftp_store=zhengxin_File
+#正式ftp服务器
 ftp_ip=120.27.46.160
+#备份ftp服务器
+#ftp_ip=172.16.1.45
 #\u670d\u52a1\u5668\u7aef\u53e3\u53f7
 searver_port=9980
 ftp_port=9999
