--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -8,8 +8,10 @@ mysql.driverClass = com.mysql.jdbc.Driver
 #mysql.user = root
 #mysql.password = hl123456
 
-
+#zhengshi
 mysql.jdbcUrl =jdbc:mysql://114.115.212.175:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#beifen
+#mysql.jdbcUrl =jdbc:mysql://172.16.1.45:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.user = root
 mysql.password = Hailian8765QD@
 
