将文件上传方式废弃ftp

--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -58,9 +58,9 @@ person.SavePath=person
 person.MaxSize=800
 # ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
 ftp_store=zhengxin_File
-#正式ftp服务器
+#\u6b63\u5f0fftp\u670d\u52a1\u5668
 ftp_ip=120.27.46.160
-#备份ftp服务器
+#\u5907\u4efdftp\u670d\u52a1\u5668
 #ftp_ip=172.16.1.45
 #\u670d\u52a1\u5668\u7aef\u53e3\u53f7
 searver_port=9980
@@ -74,3 +74,5 @@ secretkey=viHLtvR04Ab2fMJvPJe5
 #\u4f01\u67e5\u67e5\u670d\u52a1\u63a5\u53e3 
 qichacha_key=791f4eb3af844c53a6bba25f80f033b7
 qichacha_secretkey=08B3662E31DF8EC445B915B3CF108640
+fileUploadPath=E:\\javaRuntime\\apache-tomcat-forftp\\webapps\\ROOT\\zhengxin_File
+fileUploadUrl=http://120.27.46.160:1999/lianxin/uploadDoc
