--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
         </dependency>
+         <!--jfinal quartz 定时任务-->
+         <dependency>
+             <groupId>cn.dreampie</groupId>
+             <artifactId>jfinal-quartz</artifactId>
+             <version>0.2</version>
+         </dependency>
         <dependency>
             <groupId>de.ruedigermoeller</groupId>
             <artifactId>fst</artifactId>
