--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -9,18 +9,18 @@ mysql.driverClass = com.mysql.jdbc.Driver
 #mysql.password = hl123456
 
 #zhengshi
-mysql.jdbcUrl =jdbc:mysql://114.115.212.175:3306/lianxin_test?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#mysql.jdbcUrl =jdbc:mysql://114.115.212.175:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #beifen
 
 #mysql.jdbcUrl =jdbc:mysql://172.16.1.45:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-mysql.user = root
-mysql.password = Hailian8765QD@
-
-
-
-#mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
-#mysql.password = 1234
+#mysql.password = Hailian8765QD@
+
+
+
+mysql.jdbcUrl =jdbc:mysql://localhost:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.user = root
+mysql.password = root
 
 #mysql.jdbcUrl =jdbc:mysql://10.130.96.74/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #mysql.user = root
