--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -59,7 +59,7 @@ person.MaxSize=800
 # ftp\u5b58\u653e\u5730\u5740\u670d\u52a1\u5668root\u76ee\u5f55\u4e0b
 ftp_store=zhengxin_File
 #\u6b63\u5f0fftp\u670d\u52a1\u5668
-ftp_ip=localhost
+ftp_ip=221.215.57.110
 #\u5907\u4efdftp\u670d\u52a1\u5668
 #ftp_ip=172.16.1.45
 #\u670d\u52a1\u5668\u7aef\u53e3\u53f7
@@ -75,4 +75,4 @@ secretkey=viHLtvR04Ab2fMJvPJe5
 qichacha_key=791f4eb3af844c53a6bba25f80f033b7
 qichacha_secretkey=08B3662E31DF8EC445B915B3CF108640
 fileUploadPath=D:\\tomcat7\\apache-tomcat-ftp\\webapps\\ROOT\\zhengxin_File
-fileUploadUrl=http://localhost:1999/lianxin/uploadDoc
+fileUploadUrl=http://221.215.57.110:1999/lianxin/uploadDoc
