--- a/src/main/resources/conf/db.properties
+++ b/src/main/resources/conf/db.properties
@@ -6,7 +6,7 @@ mysql.driverClass = com.mysql.jdbc.Driver
 
 
 #zhengshi
-mysql.jdbcUrl =jdbc:mysql://114.115.212.175:3306/lianxin?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+mysql.jdbcUrl =jdbc:mysql://114.115.212.175:3306/lianxin_test?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 mysql.user = root
 mysql.password = Hailian8765QD@
 
